Chapter 1 exercises/Exercise Answers

Exercise 1.1 


1. In computer jargon, what’s the difference between a statement and a
comment?
  Statement - Is an instruction given to a computer - algorithms are created using multiple statements. 
 
  Comment - Text within a program which is ignored by the computer, used to describe or annotate the function of a program. 

2. What does it mean to say that a program is portable?

  It can run on multple operating systems. 
  
3. In common English, what does the word compile mean?

   It means to gather and order material or data. 
   
4. What is an executable? Why is that word used as a noun?

   An executable is the complied source code of a program (byte code for Java). 
   It is used as a noun as the code is stored as a file which is executed upon opening. 

Exercise 1.2

  Create Hello World! program. 
  
    Code in Hello.java file.


Exercise 1.3 

Creating errors in HelloWorld program

1. Remove one of the open squiggly braces.
    
    Error: '{' expected

2. Remove one of the close squiggly braces.
    
    reached end of file while parsing '}'

3. Instead of main, write mian.

   Error: Main method not found in class Hello, please define the main method as:
   public static void main(String[] args)

4. Remove the word static.

  Error: Main method is not static in class Hello, please define the main method as:
  public static void main(String[] args)

5. Remove the word public.

  Error: Main method not found in class Hello, please define the main method as:
  public static void main(String[] args)

6. Remove the word System.

    Hello.java:5: error: illegal start of expression
        .out.println("Hello, World!");
  

7. Replace println with Println.

  Hello.java:5: error: cannot find symbol
        System.out.Println("Hello, World!");
                  ^
  symbol:   method Println(String)
  location: variable out of type PrintStream

8. Replace println with print.
  No errors
9. Delete one of the parentheses. Add an extra one.
  Hello.java:5: error: ')' expected
        System.out.println("Hello, World!";
                                          ^
  Hello.java:8: error: illegal start of expression
                )
                ^


  
